--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
         <p>クリック地点から広がるアニメーション</p>
       </div>
       <div class="work">
+        <a href="https://codepen.io/hatopoppo/pen/mdrWZXY"></a>
         <div class="photo" style="background-image: url(cssWalk.png);"></div>
         <h3>歩行アニメーション</h3>
         <p>CSSアニメーションで作った歩行モーション</p>
+      </a>
       </div>
       <div class="work">
         <a href="https://codepen.io/hatopoppo/pen/dyvXwLQ">
