--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="click.css">
   <style></style>
-  <title>vue</title>
+  <title>hatopoppo-portfolio</title>
 </head>
 
 <body>
