コンテンツ拡充

--- a/index.html
+++ b/index.html
@@ -36,23 +36,37 @@
     <section id="works">
       <h2>WORKS</h2>
       <div class="work">
-        <div class="photo" style="background-image: url(emoCSS.png);"></div>
+        <div class="photo" style="background-image: url(images/emoCSS.png);"></div>
         <h3>映像表現でありがちなやつ</h3>
         <p>クリック地点から広がるアニメーション</p>
       </div>
       <div class="work">
-        <a href="https://codepen.io/hatopoppo/full/mdrWZXY">
-        <div class="photo" style="background-image: url(cssWalk.png);"></div>
+        <a href="https://codepen.io/hatopoppo/pen/mdrWZXY">
+        <div class="photo" style="background-image: url(images/cssWalk.png);"></div>
         <h3>歩行アニメーション</h3>
         <p>CSSアニメーションで作った歩行モーション</p>
       </a>
       </div>
       <div class="work">
-        <a href="https://codepen.io/hatopoppo/full/dyvXwLQ">
-        <div class="photo" style="background-image: url(neoncss.png);"></div>
+        <a href="https://codepen.io/hatopoppo/pen/dyvXwLQ">
+        <div class="photo" style="background-image: url(images/neoncss.png);"></div>
         <h3>ネオン風アニメーション</h3>
-        <p>CSSアニメーションで作ったネオン風テキスト。</p>
+        <p>CSSアニメーションで作ったネオン風テキスト</p>
       </a>
+    </div>
+    <div class="work">
+      <a href="https://codepen.io/hatopoppo/pen/PoGpMpG">
+      <div class="photo" style="background-image: url(images/gamingcss.png);"></div>
+      <h3>ゲーミング</h3>
+      <p>CSS変数で遊んだ残骸</p>
+    </a>
+    </div>
+    <div class="work">
+      <a href="https://codepen.io/hatopoppo/pen/GRgJjZL">
+      <div class="photo" style="background-image: url(images/csstyping.png);"></div>
+      <h3>noJSタイピングゲーム</h3>
+      <p>CSSの限界に近しい所に辿り着いた物</p>
+    </a>
     </div>
     </section>
     <footer>
